# tanuki

./: .flake8  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
docs/: tanuki_uml.xml
src/data_backend/: data_backend.py  database_backend.py  pandas_backend.py  sqlite3_backend.py
src/data_store/: column.py  column_alias.py  data_backend.py  data_store.py  data_type.py  index.py  index_alias.py  pandas_backend.py  query.py  query_type.py  storable_type_factory.py
src/data_store/index/: database_index.py  index.py  index_alias.py  pandas_index.py
src/database/: data_token.py  database.py  database_registrar.py  db_exceptions.py  reference_tables.py  sqlite3_database.py
src/database/adapter/: database_adapter.py  database_schema.py  sql_statement.py  sqlite3_adapter.py
src/database/adapter/query/: pandas_query_compiler.py  query_compiler.py  sql_query_compiler.py
src/database/adapter/sqlite3/: sqlite3_adapter.py  sqlite3_schema.py  sqlite3_type.py
src/database/adapter/statement/: sql_statement.py
src/tanuki/: __init__.py
src/tanuki/data_backend/: data_backend.py  database_backend.py  pandas_backend.py
src/tanuki/data_store/: column.py  column_alias.py  data_store.py  data_type.py  metadata.py  query.py  storable_type_factory.py
src/tanuki/data_store/index/: database_index.py  index.py  index_alias.py  pandas_index.py
src/tanuki/database/: connection_config.py  database.py  database_registrar.py  db_exceptions.py  reference_tables.py  sqlite3_database.py
src/tanuki/util/: time_util.py
test/: test_acceptance.py
test/data_backend/: test_database_backend.py  test_pandas_backend.py  test_sqlite3_backend.py
test/data_store/: test_column.py  test_column_query.py  test_column_type.py  test_data_store.py  test_metadata.py
test/data_store/index/: test_database_index.py  test_pandas_index.py
test/database/: test_database.py  test_database_registrar.py  test_sqlite3_database.py
test/database/adapter/: test_sql_statement.py  test_sqlite3_adapter.py
test/helpers/: database_container.py  example_metadata.py  example_store.py  expected_reference_tables.py  mock_adapter.py  mock_backend.py  mock_query_compiler.py  sqlite3_container.py
(+10 files in other folders)
