[tool.poetry]
name = "tanuki"
version = "0.1.0"
description = "An open-source type driven data frame library built to enhance your dataset management"
authors = ["Micheal Murray <m.j.murray123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.3"
pysqlite3 = "^0.4.6"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
mypy = "^0.790"
typeguard = "^2.9.1"
pytest = "^6.1.1"
PyHamcrest = "^2.0.2"
black = "^20.8b1"
rope = "^0.18.0"
flake8 = "^3.8.4"
flake8-annotations = "^2.4.1"
flake8-annotations-complexity = "^0.0.5"
flake8-annotations-coverage = "^0.0.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-comprehensions = "^3.2.3"
flake8-import-order = "^0.18.1"
flake8-mypy = "^17.8.0"
flake8-pyi = "^20.10.0"
mccabe = "^0.6.1"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"
testcontainers = {extras = ["postgresql"], version = "^3.0.3"}
precisely = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
known_third_party = ["sklearn"]
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true

[tool.pytest]
norecursedirs = "test/helpers/*"

