[metadata]
name = Tanuki
version = 1.0.0
author = Michael Murray
author_email = m.j.murray123@gmail.com
description = An open-source type driven data frame library built to enhance dataset management.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/M-J-Murray/tanuki
project_urls =
    Bug Tracker = https://github.com/M-J-Murray/tanuki/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src